# assistant

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TUI_README.md  config.example.json  fix_tests.sh  full_test_results.txt  test.txt  test_computer_use.sh  test_memory.py  test_output.txt  test_persistence.sh  test_prompt.sh  test_results.txt  test_tui.sh
crates/assistant-cli/: Cargo.toml
crates/assistant-cli/src/: actor_init.rs  lib.rs  main.rs  prompt_runner.rs  tool_runner.rs
crates/assistant-core/: Cargo.toml  full_test_results.txt
crates/assistant-core/src/: actor_init.rs  lib.rs  messages.rs
crates/assistant-core/src/actors/: chat.rs  chat_persistence.rs  client.rs  conversation_manager.rs  delegator.rs  mod.rs  sub_agent.rs  sub_agent_chat.rs  sub_agent_delegator.rs  sub_agent_display.rs  supervisor.rs
crates/assistant-core/src/actors/display/: cli.rs  mod.rs
crates/assistant-core/src/actors/tools/: base.rs  bash.rs  computer_use.rs  desktop_control.rs  edit.rs  filesystem.rs  glob.rs  grep.rs  knowledge_agent.rs  ls.rs  memory.rs  mod.rs  read.rs  read_many_files.rs  screenshot.rs  shell.rs  todo.rs  todo_write.rs  tool_registry.rs  tui_agent.rs  tui_control.rs  web.rs  web_fetch.rs  web_search.rs  write.rs
crates/assistant-core/src/config/: mod.rs  tool_config.rs
crates/assistant-core/src/embeddings/: cache.rs  client.rs  device.rs  local.rs  mod.rs  ollama.rs
crates/assistant-core/src/openai_compat/: client.rs  mod.rs  types.rs
crates/assistant-core/src/persistence/: database.rs  migrations.rs  mod.rs  schema.rs  session.rs  tui_session.rs
crates/assistant-core/src/utils/: path.rs
crates/assistant-core/tests/: mod.rs  simple_test.rs  test_chat_persistence.rs
crates/assistant-core/tests/actors/: chat_persistence_test.rs  client_test.rs  delegator_test.rs  mod.rs  supervisor_test.rs
crates/assistant-core/tests/common/: mod.rs
crates/assistant-core/tests/integration/: message_flow_test.rs  mod.rs
crates/assistant-core/tests/tools/: bash_new_test.rs  bash_test.rs  edit_test.rs  file_system_test.rs  glob_test.rs  grep_test.rs  ls_test.rs  memory_new_test.rs  memory_test.rs  mod.rs  read_many_files_test.rs  read_test.rs  todo_test.rs  todo_write_test.rs  web_fetch_test.rs  web_search_test.rs  write_test.rs
crates/assistant-tui/: Cargo.toml
crates/assistant-tui/src/: app.rs  display_actor.rs  events.rs  lib.rs  state.rs
crates/assistant-tui/src/ui/: mod.rs
crates/assistant-tui/src/ui/components/: conversation_actions.rs  conversation_list.rs  footer.rs  header.rs  input.rs  messages.rs  mod.rs
src/: main.rs
