[package]
name = "assistant-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "assistant"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
assistant-core = { path = "../assistant-core" }
clap = { version = "4.5.41", features = ["derive", "env"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
