[package]
name = "assistant-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "assistant_cli"

[dependencies]
anyhow = "1.0.98"
assistant-core = { path = "../assistant-core" }
assistant-tui = { path = "../assistant-tui" }
chrono = "0.4"
clap = { version = "4.5.41", features = ["derive", "env"] }
dirs = "5.0"
futures = "0.3.31"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4"] }
