[package]
name = "assistant-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "assistant_tui"

[dependencies]
anyhow = "1.0"
assistant-core = { path = "../assistant-core" }
chrono = "0.4"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.29"
ractor = "0.14"
tokio = { version = "1.46", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.17", features = ["v4"] }
dirs = "6.0.0"
serde_json = "1.0.142"
